src/index.css
@import "tailwindcss";

@theme {
  --breakpoint-xs: 25rem;
}

/**
 * Base Styles
 */

html {
  background-color: white;
  color: black;
  height: 100dvh;  
}

@media (prefers-color-scheme: dark) {
  html {
    background-color: var(--color-zinc-900);
    color: white;
  }
}

body, 
#root {
  height: 100%;
}

